--- a/general_website/locale/de/LC_MESSAGES/django.po
+++ b/general_website/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-29 00:23+0000\n"
+"POT-Creation-Date: 2020-04-30 11:54+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -657,6 +657,34 @@ msgid ""
 "alpha alpha alpha alpha alpha alpha alpha alpha alpha alpha alpha alpha "
 "alpha alpha"
 msgstr ""
+
+#: general_website/templates/general_website/layout/base.html:62
+msgid ""
+"\n"
+"            Greetings,<br/>\n"
+"            dev.bloodmallet.com would like to use <a href=\"https://support."
+"google.com/analytics/answer/2763052\">anonymized</a> <a href=\"https://"
+"marketingplatform.google.com/about/analytics/\">Google Analytics (GA)</a>, "
+"to know how many people are using the website. You can either accept or "
+"reject this. Your choice will be saved on your device in a cookie.\n"
+"            "
+msgstr ""
+"\n"
+"            Hey ho,<br/>\n"
+"            dev.bloodmallet.com würde gerne ein <a href=\"https://support."
+"google.com/analytics/answer/2763052\">anonymisiertes</a> <a href=\"https://"
+"marketingplatform.google.com/about/analytics/\">Google Analytics (GA)</a> "
+"verwenden, um zu sehen wie viele Nutzer die Webseite besuchen. Dem kann "
+"entweder zugestimmt oder widersprochen werden. Die getroffene Wahl wird in "
+"einem Cookie auf dem Gerät gespeichert."
+
+#: general_website/templates/general_website/layout/base.html:68
+msgid "Accept GA tracking"
+msgstr "GA akzeptieren"
+
+#: general_website/templates/general_website/layout/base.html:69
+msgid "Reject GA tracking"
+msgstr "GA widersprechen"
 
 #: general_website/templates/general_website/layout/head.html:7
 msgid "data for all"
